--- a/src/index.html
+++ b/src/index.html
@@ -35,23 +35,27 @@
       <div class="row d-flex">
         <div class="col m6 mx-auto">
           <div class="card">
-            <form name="locationControls">
+            <form name="locationControls" autocomplete="off">
               <div class="card-content">
                 <span class="card-title">Choose direction</span>
                 <div class="input-field">
-                  <input type="text" id="autocomplete-origin" class="autocomplete" />
+                  <input type="text" id="autocomplete-origin" class="autocomplete" 
+                    title="Выберите город отправления" required/>
                   <label for="autocomplete-origin">Origin</label>
                 </div>
                 <div class="input-field">
-                  <input type="text" id="autocomplete-destination" class="autocomplete" />
+                  <input type="text" id="autocomplete-destination" class="autocomplete" 
+                    title="Выберите город прибытия" required/>
                   <label for="autocomplete-destination">Destination</label>
                 </div>
                 <div class="input-field">
-                  <input type="text" class="datepicker" id="datepicker-depart" />
+                  <input type="text" class="datepicker" id="datepicker-depart" 
+                    title="Выберите дату вылета" required/>
                   <label for="datepicker-depart">Depart date</label>
                 </div>
                 <div class="input-field">
-                  <input type="text" class="datepicker" id="datepicker-return" />
+                  <input type="text" class="datepicker" id="datepicker-return" 
+                    title="Выберите дату обратного вылета" />
                   <label for="datepicker-return">Return date</label>
                 </div>
               </div>
