--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,14 @@
           <i class="large material-icons">flight_takeoff</i>
           <a href="#" class="brand-logo">Avia Tickets</a>
         </div>
+        <div class="favorites">
+          <a class="dropdown-trigger btn purple lighten-5 black-text" id="favorites" href="#"
+            data-target="dropdown1">
+            Favorites
+            <span class="favorites_counter">0</span>
+          </a>
+          <div id="dropdown1" class="dropdown-content"></div>
+        </div>
         <ul id="nav-mobile" class="right hide-on-med-and-down ml-auto">
           <li>
             <div class="input-field currency-select">
@@ -39,22 +47,33 @@
               <div class="card-content">
                 <span class="card-title">Choose direction</span>
                 <div class="input-field">
-                  <input type="text" id="autocomplete-origin" class="autocomplete" 
-                    title="Выберите город отправления" required/>
+                  <input type="text" 
+                    id="autocomplete-origin" 
+                    class="autocomplete" 
+                    title="Выберите город отправления"
+                    required />
                   <label for="autocomplete-origin">Origin</label>
                 </div>
                 <div class="input-field">
-                  <input type="text" id="autocomplete-destination" class="autocomplete" 
-                    title="Выберите город прибытия" required/>
+                  <input type="text" 
+                    id="autocomplete-destination" 
+                    class="autocomplete" 
+                    title="Выберите город прибытия"
+                    required />
                   <label for="autocomplete-destination">Destination</label>
                 </div>
                 <div class="input-field">
-                  <input type="text" class="datepicker" id="datepicker-depart" 
-                    title="Выберите дату вылета" required/>
+                  <input type="text" 
+                    class="datepicker" 
+                    id="datepicker-depart" 
+                    title="Выберите дату вылета" 
+                    required />
                   <label for="datepicker-depart">Depart date</label>
                 </div>
                 <div class="input-field">
-                  <input type="text" class="datepicker" id="datepicker-return" 
+                  <input type="text" 
+                    class="datepicker" 
+                    id="datepicker-return" 
                     title="Выберите дату обратного вылета" />
                   <label for="datepicker-return">Return date</label>
                 </div>
@@ -64,8 +83,8 @@
                   Search
                   <i class="material-icons right">send</i>
                 </button>
-                <button class="btn waves-effect waves-light pink darken-3 ml-auto" type="reset" 
-                  id="reset" name="action">
+                <button class="btn waves-effect waves-light pink darken-3 ml-auto" type="reset" id="reset"
+                  name="action">
                   Reset
                   <i class="material-icons right">cancel</i>
                 </button>
